# gears

./: .gitignore  Cargo.toml  README.md
crates/gears-app/: Cargo.toml  build.rs
crates/gears-app/src/: errors.rs  lib.rs  macros.rs  prelude.rs
crates/gears-app/src/systems/: errors.rs  mod.rs  update_systems.rs
crates/gears-core/: Cargo.toml
crates/gears-core/src/: config.rs  lib.rs  threadpool.rs
crates/gears-ecs/: Cargo.toml  macros.rs
crates/gears-ecs/src/: intents.rs  lib.rs  query.rs  query_system.rs  utils.rs
crates/gears-ecs/src/components/: controllers.rs  fsm.rs  interactive.rs  lights.rs  misc.rs  mod.rs  models.rs  pathfinding.rs  physics.rs  prefabs.rs  transforms.rs
crates/gears-gui/: Cargo.toml
crates/gears-gui/src/: lib.rs
crates/gears-macro/: Cargo.toml
crates/gears-macro/src/: lib.rs
crates/gears-renderer/: Cargo.toml  build.rs
crates/gears-renderer/shaders/: crosshair.wgsl  hdr.wgsl  shader.wgsl  wireframe.wgsl
crates/gears-renderer/src/: camera.rs  errors.rs  hdr.rs  instance.rs  lib.rs  light.rs  model.rs  resources.rs  texture.rs
crates/gears-renderer/src/animation/: clip.rs  controller.rs  mixer.rs  mod.rs  state.rs  timeline.rs  track.rs
crates/gears-renderer/src/state/: init.rs  mod.rs  resources.rs  update.rs
crates/gears-renderer/src/state/pipeline/: base.rs  crosshair.rs  hdr.rs  mod.rs  wireframe.rs
crates/gears-state/: Cargo.toml
crates/gears-state/src/: init.rs
examples/: Cargo.toml
examples/src/: aim.rs  animations.rs  custom_window.rs  fsm_character.rs  intelligent_ai.rs  intelligent_ai_fixed.rs  interactive_demo.rs  minimal.rs  pathfinding.rs  physics.rs  sandbox.rs  simple_query.rs
examples/src/interactive/: behaviour.rs  components.rs  main.rs  map.rs  setup.rs
examples/src/interactive/setup/: map.rs
gears/: Cargo.toml  build.rs  rust-toolchain.toml
gears/src/: lib.rs  macros.rs  prelude.rs
gears/src/core/: app.rs  application.rs  config.rs  event.rs  gui.rs  mod.rs  prelude.rs  threadpool.rs  window.rs
gears/src/ecs/: components.rs  mod.rs  traits.rs  utils.rs
gears/src/ecs/components/: controllers.rs  interactive.rs  light.rs  lights.rs  misc.rs  mod.rs  model.rs  models.rs  physics.rs  prefabs.rs  transform.rs  transforms.rs
gears/src/ecs/old/: mod.rs  utils.rs
gears/src/gui/: mod.rs
gears/src/renderer/: buffer.rs  buffers.rs  camera.rs  instance.rs  light.rs  light.wgsl  mod.rs  model.rs  resources.rs  shader.wgsl  shader_collider.wgsl  state.rs  texture.rs  traits.rs
gears/src/renderer/wgpu/: mod.rs
gears/src/shaders/: shader.wgsl
gears/src/state/: init.rs  mod.rs  resources.rs  update.rs
gears/src/window/: mod.rs  window.rs
gears/src/window/winit/: keybindings.rs  mod.rs
gears_macro/: Cargo.toml
res/animated/cube/: credits.md
res/gltf/low_poly_tree/: license.txt  scene.gltf
res/gltf/low_poly_wooden_box/: license.txt  scene.gltf
res/gltf/sk_mannequinn/: license.txt  scene.gltf
res/models/capsule/: capsule.blend  capsule.blend1  colors.txt
res/models/capsule/007991/: capsule.mtl
res/models/capsule/03cea4/: capsule.mtl
res/models/capsule/222e50/: capsule.mtl
res/models/capsule/439a86/: capsule.mtl
res/models/capsule/bcd8c1/: capsule.mtl
res/models/capsule/e40066/: capsule.mtl
res/models/capsule/e9d985/: capsule.mtl
res/models/capsule/fb4d3d/: capsule.mtl
res/models/low_poly_tree/: Lowpoly_tree_sample.mtl
res/models/other/: ksg.mtl
res/models/plane/: plane.blend  plane.blend1  plane.mtl
res/models/sphere/: sphere.blend  sphere.blend1
res/models/sphere/.old/: sphere.mtl
res/models/sphere/v2/: sphere.blend  sphere.mtl
res/models/wall/: wall.blend  wall.blend1
res/models/wall_10/: wall_10.blend  wall_10.blend1  wall_10.mtl
res/models/wall_50/: wall_50.blend  wall_50.blend1  wall_50.mtl
sandbox/: Cargo.toml
sandbox/src/: lib.rs  main.rs
