cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
resolver = "2"
members = [
    "crates/gears-app",
    "crates/gears-core",
    "crates/gears-ecs",
    "crates/gears-gui",
    "crates/gears-macro",
    "crates/gears-renderer",
    "crates/gears-state",
    "examples"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "The gears game engine"
homepage = ""
repository = "https://github.com/benditorok/gears"
keywords = ["game engine"]
license = ""
authors = ["benditorok"]


[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
trim-paths = "all" # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance.

# For memory allocation tracking
# [profile.release]
# debug = true

[build]
rustflags = ["-Z", "threads=8"]

[workspace.dependencies]
# Internal crates
gears-app = { path = "crates/gears-app" }
gears-core = { path = "crates/gears-core" }
gears-ecs = { path = "crates/gears-ecs" }
gears-gui = { path = "crates/gears-gui" }
gears-macro = { path = "crates/gears-macro" }
gears-renderer = { path = "crates/gears-renderer" }
gears-state = { path = "crates/gears-state" }

# External crates
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.89"
cfg-if = "1"
winit = { version = "0.30.5", features = ["rwh_05"] }
env_logger = "0.11.5"
log = "0.4"
wgpu = "22.0"
bytemuck = { version = "1.17", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "4.0.2", features = ["async"] }
image = { version = "0.25.4", default-features = false, features = [
    "png",
    "jpeg",
] }
rand = "0.8"
egui = "0.29.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.29.1", features = ["winit"] }
egui-winit = "0.29.1"
gltf = { version = "1.4", features = ["extras", "names"] }
crossbeam = "0.8"
dashmap = "6.0.1"
rayon = "1.5"
