# cargo-features = ["profile-rustflags", "trim-paths"] # requires the nightly compiler

[workspace]
resolver = "2"
members = [
    "crates/gears-app",
    "crates/gears-core",
    "crates/gears-ecs",
    "crates/gears-gui",
    "crates/gears-macro",
    "crates/gears-renderer",
    "examples"
]

[workspace.package]
version = "0.1.0"
description = "The gears game engine"
homepage = ""
repository = "https://github.com/benditorok/gears"
keywords = ["game engine"]
license = ""
authors = ["benditorok"]
edition = "2024"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
debug = true
# rustflags = ["-Zthreads=8"] # Better compile performance. # requires the nightly compiler

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
# trim-paths = "all" # Removes potentially privileged information from your binaries. # requires the nightly compiler
# rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance. # requires the nightly compiler

# For memory allocation tracking
# debug = true

# [build]
# rustflags = ["-Z", "threads=8"]

[workspace.dependencies]
# Internal crates
gears-app = { path = "crates/gears-app" }
gears-core = { path = "crates/gears-core" }
gears-ecs = { path = "crates/gears-ecs" }
gears-gui = { path = "crates/gears-gui" }
gears-macro = { path = "crates/gears-macro" }
gears-renderer = { path = "crates/gears-renderer" }

# External crates
tokio = { version = "1.47.1", features = ["full"] }
cfg-if = "1.0.3"
raw-window-handle = "0.6.2"
winit = { version = "0.30.12", features = ["rwh_06"] }
log = "0.4.28"
wgpu = {version = "25.0.2", default-features = false, features = [
    "dx12",
    "metal",
    "vulkan",
    "gles",
    "wgsl",
    "counters"
] } # TODO upgrade to ^0.26.x once egui starts using it
bytemuck = { version = "1.23.2", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "4.0.3", features = ["async", "tokio"] }
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
    "hdr"
] }
rand = "0.9.2"
egui = "0.32.3"
egui-wgpu = { version = "0.32.3", default-features = false, features = [
    "winit",
    "wayland",
    "x11"
] }
egui-winit = "0.32.3"
gltf = { version = "1.4.1", features = ["extras", "names"] }
crossbeam = "0.8"
dashmap = "6.0.1"
rayon = "1.11.0"
thiserror = "2.0.16"
