[package]
name = "examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Common example code"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gears = { path = "../gears" }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
cgmath = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

[profile.release]
debug = true

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox.rs"

[[bin]]
name = "custom_window"
path = "src/custom_window.rs"

[[bin]]
name = "physics"
path = "src/physics.rs"

[[bin]]
name = "animations"
path = "src/animations.rs"

[[bin]]
name = "light-showcase"
path = "src/light_showcase.rs"

[[bin]]
name = "aim"
path = "src/aim.rs"
