[package]
name = "examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Examples showcasing the game engine's features"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gears-app = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
cgmath = { workspace = true }
log = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

env_logger = "0.11.8"

[profile.release]
debug = true

[[example]]
name = "minimal"
path = "src/minimal.rs"

[[example]]
name = "sandbox"
path = "src/sandbox.rs"

[[example]]
name = "custom_window"
path = "src/custom_window.rs"

[[example]]
name = "physics"
path = "src/physics.rs"

[[example]]
name = "animations"
path = "src/animations.rs"

[[example]]
name = "aim"
path = "src/aim.rs"

[[example]]
name = "fsm_character"
path = "src/fsm_character.rs"

[[example]]
name = "pathfinding"
path = "src/pathfinding.rs"

[[example]]
name = "intelligent_ai"
path = "src/intelligent_ai.rs"
