[package]
name = "gears"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The gears game engine library"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
instant = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
cgmath = { workspace = true }
tobj ={ workspace = true }
