[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true

[dependencies]
gears = { path = "../gears" }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "sandbox"
path = "src/main.rs"