[package]
name = "gears-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The gears game engine library"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
gears_macro = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
cgmath = { workspace = true }
tobj = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
gltf = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
